--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Chat4Mind</title>
   
     <!-- Favicon(s) -->
-    <link rel="icon" href="images/favicon.ico" sizes="any">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <!-- Optional for Safari pinned tab -->
     <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#0ea5e9">
