--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chat4Mind</title>
   
     <!-- Favicon(s) -->
-    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon-96x96.png" sizes="any">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <!-- Optional for Safari pinned tab -->
