--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="/favicon-96x96.png" sizes="any">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="Chat4Mind" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- Optional for Safari pinned tab -->
     <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#0ea5e9">
     <meta name="theme-color" content="#0ea5e9">
